[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/ThemeMenu.tres" type="Theme" id=1]
[ext_resource path="res://GUI/AudioMenu.gd" type="Script" id=2]

[node name="AudioMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
theme = ExtResource( 1 )
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 1820.0
margin_bottom = 980.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1700.0
margin_bottom = 860.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 1680.0
margin_bottom = 45.0
text = "Audio"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 1680.0
margin_bottom = 739.0
size_flags_horizontal = 5
size_flags_vertical = 7
size_flags_stretch_ratio = 100.0

[node name="Grid" type="GridContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1670.0
margin_bottom = 634.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 7
size_flags_vertical = 7
custom_constants/vseparation = 30
custom_constants/hseparation = 50
columns = 3

[node name="MasterLabel" type="Label" parent="PanelContainer/VBoxContainer/ScrollContainer/Grid"]
margin_right = 230.0
margin_bottom = 45.0
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="PanelContainer/VBoxContainer/ScrollContainer/Grid"]
margin_left = 280.0
margin_top = 14.0
margin_right = 480.0
margin_bottom = 30.0
grow_vertical = 2
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 4
value = 100.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="MasterValue" type="Label" parent="PanelContainer/VBoxContainer/ScrollContainer/Grid"]
margin_left = 530.0
margin_right = 613.0
margin_bottom = 45.0
grow_vertical = 2
text = "100%"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_left = 1594.0
margin_top = 789.0
margin_right = 1680.0
margin_bottom = 840.0
size_flags_horizontal = 8
size_flags_vertical = 10
custom_constants/separation = 50
alignment = 2

[node name="ButtonBack" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 86.0
margin_bottom = 51.0
text = "Back"
